Change continue button in CallToAction

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -68,6 +68,9 @@
     }
 
     .continue {
+        @include btn;
+        display: block;
+        text-align: center;
         height: rem(42px);
         width: 100%;
         background-color: black;
