Fixed too wide profile picture in app header

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -2,6 +2,11 @@
     height: em(80px);
     border-block-end: 1px solid $dark-clr-2;
 
+    img {
+        width: 32px;
+        border-radius: 50%;
+    }
+
     .app-header {
         display: flex;
         justify-content: space-between;
