--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -35,7 +35,7 @@
         margin-bottom: em(-13px);
         margin-block-end: em(27px);
 
-        .owner-details-container-1 {
+        .profile-container {
             display: flex;
             // margin-block-end: 27px;
             gap: rem(12px);
