The user's gigs are displayed in his profile

--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -20,11 +20,12 @@
             .user-profile-info {
 
                 .user-profile-img {
-                    width: 150px;
                     font-size: 3em;
+                    width: 150px;
                     margin-block-end: 15px;
-
+                    
                     img {
+                        height: 150px;
                         z-index: 1;
                         width: 100%;
                         border-radius: 50%;
@@ -213,7 +214,7 @@
                 border-collapse: collapse;
                 margin-bottom: 20px;
                 margin-inline-end: 12.063rem;
-
+                
                 thead {
                     background-color: $light-clr;
                     text-transform: uppercase;
