--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -12,6 +12,7 @@
 html {
     font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: $dark-clr;
+    overflow-x: hidden;
 }
 
 body {
