--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -25,6 +25,10 @@
             }
         }
 
+        .search-bar-filter-form {
+            width: min(100%, 34.375em);
+        }
+
         .searchbar-container {
             display: flex;
             width: 100%;
