Add searchbar filter to hero

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -28,6 +28,7 @@
 
         .search-bar-filter-form {
             width: min(100%, 34.375em);
+            display: flex;
         }
 
         .searchbar-container {
