--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -17,7 +17,7 @@
             color: $light-clr;
 
             span {
-                font-family: fa-solid;
+                font-family: Domaine;
             }
         }
 
