working on style in payment-section

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "views/ReviewIndex";
 @import "views/UserDetails";
 @import "views/GigDetails.scss";
+@import "views/UserPayment.scss";
 
 // Components
 @import "cmps/AppHeader";
