--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,9 @@ $dark-clr: #404145;
 $dark-clr-1: #62646a;
 $dark-clr-2: lighten(#62646a, 50%);
 $dark-clr-3: #95979d;
+
+$light-clr4:#efeff0;
+$light-clr3:#fafafa;
 $light-clr2: #e4e5e7;
 $light-clr1: #f5f5f5;
 $light-clr: #fff;
