Manage Orders uses orders from the database and renders them dynamically

--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -3,7 +3,7 @@
         font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
         background: none;
         padding: .8rem 2rem;
-        margin-block-start: 1rem;
+        margin-block-start: .5rem;
         justify-content: space-between;
         color: $co-clr;
 
