--- a/src/assets/styles/views/UserPayment.scss
+++ b/src/assets/styles/views/UserPayment.scss
@@ -2,6 +2,18 @@
     h6{
         font-size: 1rem;
     }
+    .input{
+        outline: none;
+        border: none;
+        padding: 0 4px;
+        height: 42px;
+        margin-top: 10px;
+        border: 1px solid #c5c6c9;
+        border-radius: 4px;
+        width: 340px;
+        padding-left: 1rem;
+        
+    }
     .billing-info-wrapper{
             display: flex;
             flex-direction: column;
@@ -37,6 +49,16 @@
     .payment-methods-wrapper{
         .credit-card-details-wrapper{
             padding: 24px 18px;
+            border-bottom: 1px solid $light-clr4;
+        }
+        .credit-card-details {
+            .card{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                gap: 16px;
+                margin-top: 8px;
+            }
         }
         .credit-card-details .card-number{
             .credit-card-input-wrapper{
@@ -49,15 +71,14 @@
                 height: 42px;
                 margin-top: 10px;
                 align-items: center;
+                gap: 18px;
                 input{
-                    outline: none;
                     border: none;
-                    padding: 0 4px;
                 }
                 .card-logo{
                     display: inline-block;
-                    height: 40px;
-                    width: 40px;
+                    height: 2em;
+                    width: 2em;
                     background: white no-repeat;
                     border: none;
                     background-position-y: center;
@@ -68,5 +89,26 @@
            
         }
        
+    }
+    .payments-option{
+        display: flex;
+        padding: 16px;
+        height: 63px;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 6px;
+    }
+    .paypal{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding-left: 16px;
+        .paypal-logo{
+            width: 73px;
+            height: 20px;
+        }
+        // border: 1px solid #c5c6c9;
+        border-radius: 4px;
+        padding: 1.5rem;
     }
 }
