fixing the svg become a seller

--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -282,7 +282,10 @@
                 align-items: center;
                 gap: 1.938rem;
                 padding-block: 60px;
-
+                .become-seller-img{
+                    width: em(252px);
+                    height: em(104px);
+                }
                 h3 {
                     font-size: 18px;
                     font-weight: 600;
