Add checkout layout

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -9,6 +9,7 @@
     border: 1px solid $dark-clr-2;
     padding: em(32px) em(24px);
     margin-block-end: auto;
+    background-color: $light-clr;
 
     .icon {
         width: em(16px);
