--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,6 +31,7 @@
 @import "views/UserDetails";
 @import "views/GigDetails.scss";
 @import "views/UserPayment.scss";
+@import "views/Checkout.scss";
 
 // Components
 @import "cmps/AppHeader";
