--- a/src/assets/styles/views/UserPayment.scss
+++ b/src/assets/styles/views/UserPayment.scss
@@ -9,7 +9,7 @@
         padding: 0 em(4px);
         height: em(42px);
         margin-top: 10px;
-        border: 1px solid #c5c6c9;
+        border: em(1px) solid #c5c6c9;
         border-radius: em(4px);
         width: em(340px);
         padding-left: 1rem;
@@ -19,9 +19,9 @@
     .billing-info-wrapper {
         display: flex;
         flex-direction: column;
-        border: 1px solid $modal-underline-clr;
-        border-radius: 4px;
-        margin-bottom: 24px;
+        border: em(1px) solid $modal-underline-clr;
+        border-radius: em(4px);
+        margin-bottom: em(24px);
 
         .billing-info-header {
             line-height: 1.5rem;
@@ -38,11 +38,11 @@
             ;
             display: flex;
             flex-direction: column;
-            gap: 16px;
+            gap: em(16px);
             justify-content: space-between;
-            line-height: 24px;
+            line-height: em(24px);
             text-align: left;
-            padding: 20px;
+            padding: em(20px);
 
             .username {
                 font-weight: 600;
@@ -52,8 +52,8 @@
 
     .payment-methods-wrapper {
         .credit-card-details-wrapper {
-            padding: 24px 18px;
-            border-bottom: 1px solid $light-clr4;
+            padding: em(24px) em(18px);
+            border-bottom: em(1px) solid $light-clr4;
         }
 
         .credit-card-details {
@@ -61,8 +61,8 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                gap: 16px;
-                margin-top: 8px;
+                gap: em(16px);
+                margin-top: em(8px);
             }
         }
 
@@ -109,6 +109,7 @@
         label {
             display: flex;
             gap: em(10px);
+            cursor: pointer;
         }
     }
 }
