--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,8 +7,8 @@ $dark-clr-1: #62646a;
 $dark-clr-2: lighten(#62646a, 50%);
 $dark-clr-3: #95979d;
 
-$light-clr4:#efeff0;
-$light-clr3:#fafafa;
+$light-clr4: #efeff0;
+$light-clr3: #fafafa;
 $light-clr2: #e4e5e7;
 $light-clr1: #f5f5f5;
 $light-clr: #fff;
@@ -36,6 +36,9 @@ $user-bgclr: #f7f7f7;
 $list-title-clr: #555;
 $list-subtitle-clr: #b2b2b2;
 
+
+//User msg colors
+$shadow-clr: #b2b3b681;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
