--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import "basics/base";
 @import "basics/links";
 @import "basics/forms";
+@import "basics/animations";
 
 
 @import 'node_modules/bootstrap/scss/functions';
