Add base styling OrderIndex

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,6 +33,7 @@
 @import "views/GigDetails.scss";
 @import "views/UserPayment.scss";
 @import "views/Checkout.scss";
+@import "views/OrderIndex.scss";
 
 // Components
 @import "cmps/AppHeader";
