--- a/src/assets/styles/views/OrderIndex.scss
+++ b/src/assets/styles/views/OrderIndex.scss
@@ -9,6 +9,7 @@
         @include logo;
         font-size: rem(28px);
         letter-spacing: rem(-0.6px);
+        margin-block: 1.1rem;
     }
 
 }
