--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -1,7 +1,7 @@
 .call-to-action {
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: em(15px);
     grid-column: 2;
     grid-row: 2;
     justify-self: end;
